--- a/.qiitask/todo.txt
+++ b/.qiitask/todo.txt
@@ -3,6 +3,7 @@
 /gen/gen_scrmods.go のカバレッジ
 SHA-3 および BLAKE3 の実装 +hash
 qiitan スクリプトのシンタックス・ハイライトの VSCode 拡張（/.vscode/extensions/)を個別リポジトリとして独立させる +vscode
+/examples 内のサンプルコードの動作検証をする方法を考える +docs
 /examples を /docs に自動ドキュメント化を考える（go generate） +docs
 
 x 2021-01-12 /docs/README.md -> index.md に変更
